--- a/UI/InterfaceOpportunity.ui
+++ b/UI/InterfaceOpportunity.ui
@@ -966,7 +966,7 @@ gridline-color: rgb(0, 0, 0);</string>
       </item>
       <item row="2" column="0">
        <property name="text">
-        <string>S8,S18,S1</string>
+        <string>S1,S8,S18</string>
        </property>
        <property name="font">
         <font>
@@ -1285,7 +1285,7 @@ Sections</string>
       </item>
       <item>
        <property name="text">
-        <string>Chargers</string>
+        <string>Stop vector</string>
        </property>
       </item>
       <item>
