--- a/UI/InterfaceBus.ui
+++ b/UI/InterfaceBus.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="windowModality">
+   <enum>Qt::NonModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -1780,8 +1783,8 @@ gridline-color: rgb(0, 0, 0);</string>
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>100</width>
-          <height>30</height>
+          <width>191</width>
+          <height>71</height>
          </rect>
         </property>
         <attribute name="label">
@@ -2200,7 +2203,13 @@ gridline-color: rgb(0, 0, 0);</string>
      <height>26</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);</string>
+   </property>
    <widget class="QMenu" name="menuHelp">
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(191, 191, 191)</string>
+    </property>
     <property name="title">
      <string>Help</string>
     </property>
