--- a/UI/InterfaceDynamic.ui
+++ b/UI/InterfaceDynamic.ui
@@ -1258,7 +1258,7 @@ gridline-color: rgb(0, 0, 0);</string>
        </font>
       </property>
       <property name="statusTip">
-       <string>Push to go load charge sections</string>
+       <string>Push to load charge sections</string>
       </property>
       <property name="styleSheet">
        <string notr="true">background-color: rgb(159, 159, 159);</string>
@@ -1332,7 +1332,7 @@ Sections</string>
        </font>
       </property>
       <property name="statusTip">
-       <string>Push to go load charge sections</string>
+       <string>Push to save charge sections</string>
       </property>
       <property name="styleSheet">
        <string notr="true">background-color: rgb(159, 159, 159);</string>
@@ -1522,7 +1522,7 @@ Sections</string>
        </font>
       </property>
       <property name="statusTip">
-       <string>Push to load the simulation</string>
+       <string>Push to graph the simulation</string>
       </property>
       <property name="styleSheet">
        <string notr="true">background-color: rgb(159, 159, 159);</string>
@@ -1585,7 +1585,13 @@ Sections</string>
      <height>26</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);</string>
+   </property>
    <widget class="QMenu" name="menuHelp">
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(191, 191, 191)</string>
+    </property>
     <property name="title">
      <string>Help</string>
     </property>
