--- a/UI/About.ui
+++ b/UI/About.ui
@@ -580,11 +580,11 @@ efectos de la recarga de buses
 eléctricos sobre redes de
 distribución
 
-Authors v. 1:
+Authors v. 2020-1:
 Andrés De la Hoz
 Andrea De la Hoz
 
-Authors v. 2:
+Authors v. 2022-1:
 Javier Bayter
 Erick Narváez
 
