--- a/UI/InterfaceGrid.ui
+++ b/UI/InterfaceGrid.ui
@@ -682,6 +682,93 @@ File</string>
       </layout>
      </widget>
     </widget>
+    <widget class="QWidget" name="VoltagesTab">
+     <attribute name="title">
+      <string>Voltages</string>
+     </attribute>
+     <widget class="QLabel" name="NodeLabelVoltages">
+      <property name="geometry">
+       <rect>
+        <x>360</x>
+        <y>20</y>
+        <width>51</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>MS Sans Serif</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Node</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="NodeListComboBoxVoltages">
+      <property name="geometry">
+       <rect>
+        <x>410</x>
+        <y>20</y>
+        <width>151</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>MS Sans Serif</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="statusTip">
+       <string>Choose the node that prefer see</string>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="VoltagesGraphButton">
+      <property name="geometry">
+       <rect>
+        <x>410</x>
+        <y>420</y>
+        <width>121</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>MS Sans Serif</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="statusTip">
+       <string>Push to graph the simulation</string>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(159, 159, 159);</string>
+      </property>
+      <property name="text">
+       <string>Graph</string>
+      </property>
+     </widget>
+     <widget class="QWidget" name="VoltagesCurveWidget" native="true">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>80</y>
+        <width>901</width>
+        <height>311</height>
+       </rect>
+      </property>
+     </widget>
+    </widget>
    </widget>
    <widget class="QFrame" name="ButtonsFrame">
     <property name="geometry">
