--- a/UI/InterfaceGrid.ui
+++ b/UI/InterfaceGrid.ui
@@ -552,6 +552,200 @@ File</string>
       </property>
      </widget>
     </widget>
+    <widget class="QWidget" name="VoltagesTab">
+     <attribute name="title">
+      <string>Voltages</string>
+     </attribute>
+     <widget class="QWidget" name="VoltageCurveWidget" native="true">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>70</y>
+        <width>441</width>
+        <height>321</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QWidget" name="VoltageAngleCurveWidget" native="true">
+      <property name="geometry">
+       <rect>
+        <x>480</x>
+        <y>70</y>
+        <width>441</width>
+        <height>321</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="NodeListComboBoxVoltages">
+      <property name="geometry">
+       <rect>
+        <x>420</x>
+        <y>20</y>
+        <width>151</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>MS Sans Serif</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="statusTip">
+       <string>Choose the node that prefer see</string>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="VoltagesGraphButton">
+      <property name="geometry">
+       <rect>
+        <x>410</x>
+        <y>420</y>
+        <width>121</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>MS Sans Serif</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="statusTip">
+       <string>Push to graph the Voltages simulation</string>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(159, 159, 159);</string>
+      </property>
+      <property name="text">
+       <string>Graph</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="NodeLabelVoltages">
+      <property name="geometry">
+       <rect>
+        <x>370</x>
+        <y>20</y>
+        <width>51</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>MS Sans Serif</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Node</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="CurrentsTab">
+     <attribute name="title">
+      <string>Currents</string>
+     </attribute>
+     <widget class="QWidget" name="CurrentAngleCurveWidget" native="true">
+      <property name="geometry">
+       <rect>
+        <x>480</x>
+        <y>70</y>
+        <width>441</width>
+        <height>321</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="CurrentsGraphButton">
+      <property name="geometry">
+       <rect>
+        <x>410</x>
+        <y>420</y>
+        <width>121</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>MS Sans Serif</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="statusTip">
+       <string>Push to graph the Voltages simulation</string>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(159, 159, 159);</string>
+      </property>
+      <property name="text">
+       <string>Graph</string>
+      </property>
+     </widget>
+     <widget class="QWidget" name="CurrentCurveWidget" native="true">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>70</y>
+        <width>441</width>
+        <height>321</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="LineListComboBox">
+      <property name="geometry">
+       <rect>
+        <x>420</x>
+        <y>20</y>
+        <width>151</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>MS Sans Serif</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="statusTip">
+       <string>Choose the node that prefer see</string>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="LineLabel">
+      <property name="geometry">
+       <rect>
+        <x>370</x>
+        <y>20</y>
+        <width>51</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <family>MS Sans Serif</family>
+        <pointsize>10</pointsize>
+        <weight>75</weight>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>Line</string>
+      </property>
+     </widget>
+    </widget>
     <widget class="QWidget" name="ResultsTab">
      <attribute name="title">
       <string>Results</string>
@@ -559,7 +753,7 @@ File</string>
      <widget class="QPushButton" name="VoltageProfileButton">
       <property name="geometry">
        <rect>
-        <x>280</x>
+        <x>450</x>
         <y>410</y>
         <width>191</width>
         <height>41</height>
@@ -586,7 +780,7 @@ File</string>
      <widget class="QPushButton" name="SummaryButton">
       <property name="geometry">
        <rect>
-        <x>120</x>
+        <x>290</x>
         <y>410</y>
         <width>151</width>
         <height>41</height>
@@ -613,7 +807,7 @@ File</string>
      <widget class="QWidget" name="verticalLayoutWidget_3">
       <property name="geometry">
        <rect>
-        <x>120</x>
+        <x>290</x>
         <y>40</y>
         <width>351</width>
         <height>351</height>
@@ -635,203 +829,6 @@ File</string>
        </item>
       </layout>
      </widget>
-     <widget class="QComboBox" name="NodeListComboBoxVoltages">
-      <property name="geometry">
-       <rect>
-        <x>600</x>
-        <y>160</y>
-        <width>151</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>MS Sans Serif</family>
-        <pointsize>10</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="statusTip">
-       <string>Choose the node that prefer see</string>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(255, 255, 255);</string>
-      </property>
-     </widget>
-     <widget class="QComboBox" name="LineListComboBox">
-      <property name="geometry">
-       <rect>
-        <x>600</x>
-        <y>320</y>
-        <width>151</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>MS Sans Serif</family>
-        <pointsize>10</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="statusTip">
-       <string>Choose the node that prefer see</string>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(255, 255, 255);</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="VoltagesGraphButton">
-      <property name="geometry">
-       <rect>
-        <x>770</x>
-        <y>160</y>
-        <width>101</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>MS Sans Serif</family>
-        <pointsize>10</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="statusTip">
-       <string>Push to graph the simulation</string>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(159, 159, 159);</string>
-      </property>
-      <property name="text">
-       <string>Graph</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="NodeLabelVoltages">
-      <property name="geometry">
-       <rect>
-        <x>550</x>
-        <y>160</y>
-        <width>51</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>MS Sans Serif</family>
-        <pointsize>10</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="text">
-       <string>Node</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="LineLabel">
-      <property name="geometry">
-       <rect>
-        <x>550</x>
-        <y>320</y>
-        <width>51</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>MS Sans Serif</family>
-        <pointsize>10</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="text">
-       <string>Line</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="VoltageLabel">
-      <property name="geometry">
-       <rect>
-        <x>640</x>
-        <y>110</y>
-        <width>181</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>MS Sans Serif</family>
-        <pointsize>12</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="autoFillBackground">
-       <bool>false</bool>
-      </property>
-      <property name="text">
-       <string>Voltages Behavior</string>
-      </property>
-     </widget>
-     <widget class="QLabel" name="CurrentLabel">
-      <property name="geometry">
-       <rect>
-        <x>640</x>
-        <y>270</y>
-        <width>181</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>MS Sans Serif</family>
-        <pointsize>12</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="autoFillBackground">
-       <bool>false</bool>
-      </property>
-      <property name="text">
-       <string>Currents Behavior</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="CurrentsGraphButton">
-      <property name="geometry">
-       <rect>
-        <x>770</x>
-        <y>320</y>
-        <width>101</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <family>MS Sans Serif</family>
-        <pointsize>10</pointsize>
-        <weight>75</weight>
-        <bold>true</bold>
-       </font>
-      </property>
-      <property name="statusTip">
-       <string>Push to graph the simulation</string>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">background-color: rgb(159, 159, 159);</string>
-      </property>
-      <property name="text">
-       <string>Graph</string>
-      </property>
-     </widget>
-    </widget>
-    <widget class="QWidget" name="VoltagesTab">
-     <attribute name="title">
-      <string>Voltages and currents</string>
-     </attribute>
     </widget>
    </widget>
    <widget class="QFrame" name="ButtonsFrame">
